some movement in code

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         />
         <button class="add-task-btn text-white position-absolute">Add</button>
         <div class="task-container p-2">
-          <!-- task would going here -->
+          <!-- tasks will be here -->
         </div>
       </div>
     </div>
